--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_timetable">TimetableActivity</string>
+    <string name="navigate_before_text">Назад</string>
+    <string name="navigate_next_text">Вперёд</string>
+    <string name="currentDateText">08.09.22</string>
+    <string name="timetable_bottom_nav_bar_text">Расписание</string>
+    <string name="professor_bottom_nav_bar_text">Преподователи</string>
 </resources>
