--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="teacherTV_placeholder">Имя преподавателя</string>
     <string name="subjectTypeTV_placeholder">Тип предмета</string>
     <string name="timeTV_placeholder">Время</string>
+    <string name="professor_fragment_placeholder_text">Professor Fragment</string>
 </resources>
