--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="timeTV_placeholder">Время</string>
     <string name="professor_fragment_placeholder_text">Professor Fragment</string>
     <string name="default_day_string">ВОСКРЕСЕНЬЕ</string>
+    <string name="chooseGroupButton">Выбрать группу</string>
+    <string name="groupNameTVPlaceholder">GroupName</string>
+    <string name="groupSearchQueryHint">Название группы…</string>
+    <string name="groupSharedPreferencesPath">groupId</string>
 </resources>
