--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="lbl11">Преподаватель</string>
     <string name="lbl">Расписание</string>
     <string name="lbl12">Кафедра</string>
-    <string name="lbl_19_1">РИС–19-1б</string>
+    <string name="lbl_19_1">РИС–19–1б</string>
+    <string name="string_lbl12">string/lbl12</string>
 </resources>
