Добавил отображение оценок и комментариев на вьюхе выбранного препода

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="lbl11">Преподаватель</string>
     <string name="lbl">Расписание</string>
     <string name="lbl12">Кафедра</string>
+    <string name="lbl13">Комментарии</string>
     <string name="lbl_19_1">РИС–19–1б</string>
     <string name="professorSinglePageHeader">Преподаватель</string>
     <string name="professorPageHeader">Преподаватели</string>
