--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="lbl_1">1 неделя</string>
     <string name="lbl_11_30">11:30</string>
     <string name="lbl_22">22 оценки</string>
-    <string name="lbl4">Сегодня</string>
+    <string name="lbl4">ВОСКРЕСЕНЬЕ</string>
     <string name="lbl5">Преподаватели</string>
     <string name="lbl2">Лаб</string>
     <string name="lbl_24_12_22">24.12.22</string>
